# engineering-k-perfect-hashing

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  README.md  gcc-14.1.0.tar.gz.1  spack.yaml
bench/: CMakeLists.txt  CmphContender.hpp  HashDisplaceContender.hpp  PaCHashContender.hpp  RecSplitContender.hpp  ThresholdBasedBumpingConsensusContender.hpp  bench.hpp  main.cpp  stat.hpp
benchmarklib/: BenchmarkData.h  Contender.cpp  Contender.h  DispatchK.h
contenders/: ChdContender.cpp  ChdContender.hpp  HashDisplaceContender.cpp  HashDisplaceContender.hpp  KRecSplitContender.cpp  KRecSplitContender.hpp  PaCHashContender.cpp  PaCHashContender.hpp  ThresholdBasedBumpingConsensusContender.cpp  ThresholdBasedBumpingConsensusContender.hpp  ThresholdBasedBumpingContender.cpp  ThresholdBasedBumpingContender.hpp  ThresholdBasedBumpingOldContender.cpp  ThresholdBasedBumpingOldContender.hpp
include/common/: hash128.hpp
include/hash-displace/: BucketFunction.hpp  CompactEncoding.hpp  HashDisplace.hpp  OptimalBucketFunction.hpp  RiceEncoding.hpp  UniformBucketFunction.hpp
include/kphf/: HashDisplace.hpp  PaCHash.hpp  ThresholdBasedBumpingConsensus.hpp  consensus.hpp  kphf.hpp  util.hpp
include/kphf/hash-displace/: BucketFunction.hpp
include/kphf/pachash/: EliasFano.hpp
include/kphf/recsplit/: kRecSplit.hpp
include/kphf/sux/bits/: Rank9.hpp
include/kphf/sux/function/: RiceBitVector.hpp  kRecSplit.hpp
include/pachash/: EliasFano.hpp  PaCHash.hpp
include/recsplit/: RiceBitVector.hpp  kRecSplit.hpp
include/threshold-based-bumping/: ThresholdBasedBumping.hpp  ThresholdBasedBumpingConsensus.hpp  common.hpp  consensus.hpp  optimalThresholds.hpp  optimalThresholdsAsymp.hpp
scripts/: scatterplot.sh  table.sh
src/: comparison.cpp  muericalIntegrationBucketFunction.cpp  printThresholds.cpp  table.cpp
